[package]
name = "mile39"
description = "geospacial indexes"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/donpdonp/mile39/"

[dependencies]
lmdb = "0.8"
json = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
